--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
                 </ul>
             </nav>
             <ul class="contacts-list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="contacts">
+                        <svg width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com
+                    </a></li>
+                <li class="item"><a href="tel:+38 096 111 11 11" class="contacts"><svg width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -45,12 +51,13 @@
             </div>
         </section>
 
+
         <!-- Наші переваги -->
         <section class="benefits section">
             <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="benefits-list">
-                    <li class="item">
+                    <li class="item icon-antenna">
                         <h3 class="title">Увага до деталей</h3>
                         <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
                             позиції.</p>
@@ -105,6 +112,24 @@
                         <div class="team-description">
                             <h3 class="title">Ігор Дем'яненко</h3>
                             <p class="team-member-text">Product Designer</p>
+                            <ul class="soc-list">
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -112,6 +137,23 @@
                         <div class="team-description">
                             <h3 class="title">Ольга Рєпіна</h3>
                             <p class="team-member-text">Frontend Developer</p>
+                            <ul class="soc-list">
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg> </a></li>
                         </div>
                     </li>
                     <li class="team-member">
@@ -119,6 +161,23 @@
                         <div class="team-description">
                             <h3 class="title">Микола Тарасов</h3>
                             <p class="team-member-text">Marketing</p>
+                            <ul class="soc-list">
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg> </a></li>
                         </div>
                     </li>
                     <li class="team-member">
@@ -126,24 +185,89 @@
                         <div class="team-description">
                             <h3 class="title">Михайло Єрмаков</h3>
                             <p class="team-member-text">UI Designer</p>
+                            <ul class="soc-list">
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg> </a></li>
+                                <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20"
+                                            height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg> </a></li>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+
+        <section class="clients section">
+            <div class="container">
+                <h2 class="section-title">Постійні клієнти</h2>
+                <ul class="clients-list">
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo0"></use>
+                            </svg></a></li>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo1"></use>
+                            </svg></a></li>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo2"></use>
+                            </svg></a></li>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo3"></use>
+                            </svg></a></li>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo4"></use>
+                            </svg></a></li>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo5"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
+        </section>
+
     </main>
     <!-- футер -->
     <footer class="page-footer">
         <div class="container">
-            <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
-            <address>
-                <ul class="address-list">
-                    <li class="item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="location" target="_blank"
-                            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="page-footer-contacts">
+                <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
+                <address>
+                    <ul class="address-list">
+                        <li class="item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="location"
+                                target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                        </li>
+                        <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+                        </li>
+                        <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="page-footer-soc-block">
+                <p class="soc-links-title">приєднуйтесь</p>
+                <ul class="soc-list">
+                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg> </a></li>
+                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg> </a></li>
+                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg> </a></li>
+                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg> </a></li>
+            </div>
+
         </div>
     </footer>
 </body>
