--- a/portfolio.html
+++ b/portfolio.html
@@ -48,24 +48,29 @@
                     <li class="item"><button type="button" class="filter-button">Маркетинг</button></li>
                 </ul>
                 <ul class="projects-list">
-                    <li class="projects-item"><img src="./images/project1.jpg" alt="ноутбук з відкритим вебсайтом"
-                            width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Технокряк</h2>
-                            <p class="text">Веб-сайт</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project1.jpg"
+                                alt="ноутбук з відкритим вебсайтом" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Технокряк</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project2.jpg" alt="2 баскетболісти" width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                            <p class="text">Дизайн</p>
-                        </div>
+                    <li class="projects-item"><a href="" class=""><img src="./images/project2.jpg" alt="2 баскетболісти"
+                                width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project3.jpg" alt="лого рибного ресторану" width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Ресторан Seafood</h2>
-                            <p class="text">Додаток</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project3.jpg"
+                                alt="лого рибного ресторану" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Ресторан Seafood</h2>
+                                <p class="text">Додаток</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="projects-item"><img src="./images/project4.jpg" alt="навушники" width="370">
                         <div class="projects-discription">
