--- a/index.html
+++ b/index.html
@@ -57,22 +57,42 @@
             <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="benefits-list">
-                    <li class="item icon-antenna">
+                    <li class="item">
+                        <div class="benefits-icon">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-antenna1"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Увага до деталей</h3>
                         <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
                             позиції.</p>
                     </li>
                     <li class="item">
+                        <div class="benefits-icon">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-clock1"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Пунктуальність</h3>
                         <p class="benefits-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у
                             себе.
                         </p>
                     </li>
                     <li class="item">
+                        <div class="benefits-icon">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-diagram1"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Планування</h3>
                         <p class="benefits-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="item">
+                        <div class="benefits-icon">
+                            <svg width="70" height="70">
+                                <use href="./images/icons.svg#icon-astronaut1"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Сучасні технології</h3>
                         <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових
                             завдань.
@@ -238,36 +258,38 @@
     <!-- футер -->
     <footer class="page-footer">
         <div class="container">
-            <div class="page-footer-contacts">
-                <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
-                <address>
-                    <ul class="address-list">
-                        <li class="item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="location"
-                                target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
-                        </li>
-                        <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
-                        </li>
-                        <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
-                    </ul>
-                </address>
+            <div class="footer-div">
+                <div class="page-footer-contacts">
+                    <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
+                    <address>
+                        <ul class="address-list">
+                            <li class="item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="location"
+                                    target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки,
+                                    26</a>
+                            </li>
+                            <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+                            </li>
+                            <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="page-footer-soc-block">
+                    <p class="soc-links-title">приєднуйтесь</p>
+                    <ul class="soc-list">
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg> </a></li>
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg> </a></li>
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg> </a></li>
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg> </a></li>
+                </div>
             </div>
-            <div class="page-footer-soc-block">
-                <p class="soc-links-title">приєднуйтесь</p>
-                <ul class="soc-list">
-                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg> </a></li>
-                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg> </a></li>
-                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg> </a></li>
-                    <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg> </a></li>
-            </div>
-
         </div>
     </footer>
 </body>
