--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,14 @@
                 </ul>
             </nav>
             <ul class="contacts-list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="contacts">
+                        <svg width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com
+                    </a></li>
+                <li class="item"><a href="tel:+38 096 111 11 11" class="contacts"><svg width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -56,8 +62,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item"><a href="" class=""><img src="./images/project2.jpg" alt="2 баскетболісти"
-                                width="370">
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project2.jpg"
+                                alt="2 баскетболісти" width="370">
                             <div class="projects-discription">
                                 <h2 class="title">Постер New Orlean vs Golden Star</h2>
                                 <p class="text">Дизайн</p>
@@ -72,42 +78,53 @@
                             </div>
                         </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project4.jpg" alt="навушники" width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Проєкт Prime</h2>
-                            <p class="text">Маркетинг</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project4.jpg"
+                                alt="навушники" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Проєкт Prime</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project5.jpg" alt="2 коробки" width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Проєкт Boxes</h2>
-                            <p class="text">Додаток</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project5.jpg"
+                                alt="2 коробки" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Проєкт Boxes</h2>
+                                <p class="text">Додаток</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project6.jpg" alt="компьютер Apple" width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Inspiration has no Borders</h2>
-                            <p class="text">Веб-сайт</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project6.jpg"
+                                alt="компьютер Apple" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Inspiration has no Borders</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project7.jpg" alt="відкрита книга" width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Видання Limited Edition</h2>
-                            <p class="text">Дизайн</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project7.jpg"
+                                alt="відкрита книга" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Видання Limited Edition</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project8.jpg" alt="етикетка від одягу" width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Проєкт LAB</h2>
-                            <p class="text">Маркетинг</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project8.jpg"
+                                alt="етикетка від одягу" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Проєкт LAB</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="projects-item"><img src="./images/project9.jpg" alt="людина працює на ноутбуці"
-                            width="370">
-                        <div class="projects-discription">
-                            <h2 class="title">Growing Business</h2>
-                            <p class="text">Додаток</p>
-                        </div>
+                    <li class="projects-item"><a href="" class="projects-link"><img src="./images/project9.jpg"
+                                alt="людина працює на ноутбуці" width="370">
+                            <div class="projects-discription">
+                                <h2 class="title">Growing Business</h2>
+                                <p class="text">Додаток</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -116,15 +133,38 @@
     <!-- футер -->
     <footer class="page-footer">
         <div class="container">
-            <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
-            <address>
-                <ul class="address-list">
-                    <li class="item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="location" target="_blank"
-                            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="footer-div">
+                <div class="page-footer-contacts">
+                    <a href="./index.html" class="logo"><span class="logo-accent">Web</span>Studio</a>
+                    <address>
+                        <ul class="address-list">
+                            <li class="item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="location"
+                                    target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки,
+                                    26</a>
+                            </li>
+                            <li class="item"><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+                            </li>
+                            <li class="item"><a href="tel:+38 096 111 11 11" class="contacts">+38 096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="page-footer-soc-block">
+                    <p class="soc-links-title">приєднуйтесь</p>
+                    <ul class="soc-list">
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg> </a></li>
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg> </a></li>
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg> </a></li>
+                        <li class="soc-item"><a href="" class="soc-link"><svg class="soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg> </a></li>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
