--- a/index.html
+++ b/index.html
@@ -232,23 +232,29 @@
             <div class="container">
                 <h2 class="section-title">Постійні клієнти</h2>
                 <ul class="clients-list">
-                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
-                                <use href="./images/icons.svg#icon-Logo0"></use>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon" width="106"
+                                height="60">
+                                <use href="./images/icons.svg#icon-logo0"></use>
                             </svg></a></li>
-                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
-                                <use href="./images/icons.svg#icon-Logo1"></use>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon" width="106"
+                                height="60">
+                                <use href="./images/icons.svg#icon-logo1"></use>
                             </svg></a></li>
-                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
-                                <use href="./images/icons.svg#icon-Logo2"></use>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon" width="106"
+                                height="60">
+                                <use href="./images/icons.svg#icon-logo2"></use>
                             </svg></a></li>
-                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
-                                <use href="./images/icons.svg#icon-Logo3"></use>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon" width="106"
+                                height="60">
+                                <use href="./images/icons.svg#icon-logo3"></use>
                             </svg></a></li>
-                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
-                                <use href="./images/icons.svg#icon-Logo4"></use>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon" width="106"
+                                height="60">
+                                <use href="./images/icons.svg#icon-logo4"></use>
                             </svg></a></li>
-                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon">
-                                <use href="./images/icons.svg#icon-Logo5"></use>
+                    <li class="clients-item"><a href="" class="clients-link"><svg class="clients-icon" width="106"
+                                height="60">
+                                <use href="./images/icons.svg#icon-logo5"></use>
                             </svg></a></li>
                 </ul>
             </div>
